<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_IO_Status" Id="{012d619c-76b8-417f-9dfe-731457e449da}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_IO_Status :
STRUCT
	inputs : ST_InputStatus;
	outputs : ST_OutputStatus;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>