<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="IO" Id="{699d1730-588e-4bab-8015-7760f60f9d2e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
   IO_Status : ST_IO_Status;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>