<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="T_Data" Id="{f5274923-7677-4878-8f42-4f7d00aba597}" SpecialFunc="None">
    <Declaration><![CDATA[// provide API method calls to retreive IO status, Recipe Management Status and controller status.
FUNCTION_BLOCK T_Data
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="GetIO" Id="{ec4027c0-e26b-48ab-b95c-2e5556ef48aa}">
      <Declaration><![CDATA[{attribute 'TcRpcEnable'}
METHOD PUBLIC GetIO : ST_IO_Status
VAR_INST
    cnt : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetIO := IO.IO_Status;
cnt := cnt + 1;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetIOAsJson" Id="{e5726361-c4a6-49cc-8229-ef38a2fa04ec}">
      <Declaration><![CDATA[{attribute 'TcRpcEnable'}
METHOD PUBLIC GetIOAsJson : JsonDoc
VAR_INST
    cnt : INT;
END_VAR
VAR 
	jsonDocToProp : FB_JsonReadWriteDatatype;
	sizeOfJDoc : UDINT;
END_VAR
VAR_INST
	sizeOfDoc : UDINT;
	jDoc : JsonDoc;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[sizeOfDoc := SIZEOF(jDoc);
jsonDocToProp.GetJsonFromSymbol('ST_IO_Status',SIZEOF(IO.IO_Status), ADR(IO.IO_Status), sizeOfDoc, ADR(jDoc));
GetIOAsJson := jDoc;
cnt := cnt + 1;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetIOAsJson" Id="{ae2f91ce-d980-4f4a-814c-1278bb2be93a}">
      <Declaration><![CDATA[{attribute 'TcRpcEnable'}
METHOD PUBLIC SetIOAsJson : UDINT;
VAR_INPUT
	jDocIn : JsonDoc;
END_VAR
VAR_OUTPUT
	
END_VAR
VAR_INST
    cnt : INT;
END_VAR
VAR 
	jsonDocToProp : FB_JsonReadWriteDatatype;
	sizeOfJDoc : UDINT;
END_VAR
VAR_INST
	sizeOfDoc : UDINT;
	jDoc : JsonDoc;
	localIO : ST_IO_Status;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[SetIOAsJson := SIZEOF(jDocIn);
jDoc := jDocIn;
jsonDocToProp.SetSymbolFromJson( jDocIn, 'ST_IO_Status',SIZEOF(localIo), ADR(localIo));
cnt := cnt + 1;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="T_Data">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="T_Data.GetIO">
      <LineId Id="43" Count="0" />
      <LineId Id="34" Count="0" />
    </LineIds>
    <LineIds Name="T_Data.GetIOAsJson">
      <LineId Id="58" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="34" Count="0" />
    </LineIds>
    <LineIds Name="T_Data.SetIOAsJson">
      <LineId Id="58" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="34" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>